--- a/mi-portfolio/tsconfig.app.json
+++ b/mi-portfolio/tsconfig.app.json
@@ -12,6 +12,8 @@
     "src/**/*.ts"
   ],
   "exclude": [
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/server-backup/**",
+    "src/app/pipes/capitalizar-pipe.ts"
   ]
 }
